Project

General

Profile

Actions

Bug #54488

open

can not get quota config via swift api

Added by yunqing wang about 2 years ago. Updated over 1 year ago.

Status:
Pending Backport
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
quincy pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

**According to [[https://docs.openstack.org/api-ref/object-store/?expanded=show-container-metadata-detail#show-container-metadata]],
we can get the quota config by head the bucket.

However, rgw would not give it because `RGWOp::init_quota()` returned before the `bucket_quota` was set.


Related issues 2 (1 open1 closed)

Copied to rgw - Backport #54609: pacific: can not get quota config via swift apiRejectedDaniel GryniewiczActions
Copied to rgw - Backport #54610: quincy: can not get quota config via swift apiIn ProgressKonstantin ShalyginActions
Actions #1

Updated by Casey Bodley about 2 years ago

  • Description updated (diff)
  • Status changed from New to Fix Under Review
  • Assignee set to Daniel Gryniewicz
Actions #3

Updated by Daniel Gryniewicz about 2 years ago

  • Backport set to quincy pacific
Actions #4

Updated by Daniel Gryniewicz about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54609: pacific: can not get quota config via swift api added
Actions #6

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54610: quincy: can not get quota config via swift api added
Actions #7

Updated by Casey Bodley about 2 years ago

  • Pull request ID changed from 45288 to 45343
Actions #8

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF