rgw: return bucket quota for swift api

Fixes: https://tracker.ceph.com/issues/54488

Signed-off-by: wangyunqing <wangyunqing@inspur.com>